apps/internal/rag/qdrant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qdrant
  namespace: svc-rag
  labels:
    app: qdrant
spec:
  type: ClusterIP
  selector:
    app: qdrant
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: grpc
      port: 6334
      targetPort: grpc
      protocol: TCP
